--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Luther</title>
+    <title>LHK</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -56,14 +56,14 @@
         <header class="s-header">
 
             <div class="header-mobile">
-                <span class="mobile-home-link"><a href="index.html">Luther.</a></span>
+                <span class="mobile-home-link"><a href="index.html">LHK.</a></span>
                 <a class="mobile-menu-toggle" href="#0"><span>Menu</span></a>
             </div>
 
             <div class="row wide main-nav-wrap">
                 <nav class="column lg-12 main-nav">
                     <ul>
-                        <li><a href="index.html" class="home-link">Luther.</a></li>
+                        <li><a href="index.html" class="home-link">LHK.</a></li>
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#works" class="smoothscroll">Works</a></li>
@@ -92,8 +92,8 @@
                         </div>
 
                         <h1 class="text-huge-title">
-                            I am Luther, <br>
-                            a digital designer <br>
+                            I am Lior, <br>
+                            a backend <br>
                             & frontend <br> 
                             developer based <br>
                             in Somewhere.
@@ -101,9 +101,7 @@
                     </div>
 
                     <ul class="intro-social">
-                        <li><a href="#0">Behance</a></li>
                         <li><a href="#0">Twitter</a></li>
-                        <li><a href="#0">Dribbble</a></li>
                         <li><a href="#0">Instagram</a></li>
                     </ul>
 
@@ -135,11 +133,10 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                                velit esse cillum dolore eu fugiat nulla pariatur.
+                                Hi, I'm a passionate developer with a love for creating innovative and efficient solutions.
+                                I enjoy exploring new technologies, building creative projects, and constantly improving my skills.
+                                My goal is to bring ideas to life through code and design,
+                                while delivering impactful and user-friendly experiences.
                             </p>
                             <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
@@ -155,11 +152,11 @@
 
                         <ul class="skills-list h1" data-animate-el>
                             <li>Visual Design</li>
-                            <li>Branding Identity</li>
+                            <li>DateBase Management</li>
                             <li>UI Design</li>
-                            <li>Product Design</li>
-                            <li>Prototyping</li>
-                            <li>Illustration</li>
+                            <li>App Development</li>
+                            <li>C# Programming</li>
+                            <li>MS Access</li>
                         </ul>
 
                     </div>
