--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                     <div class="column lg-6 md-12 about-info__pic-block">
                         <img src="439908296_951911566934058_5422284972250573345_n.jpg" 
-                             srcset="images/about-photo.jpg 1x, images/about-photo@2x.jpg 2x" alt="" class="about-info__pic" data-animate-el>
+                             srcset="439908296_951911566934058_5422284972250573345_n.jpg 1x, images/about-photo@2x.jpg 2x" alt="" class="about-info__pic" data-animate-el>
                     </div>
 
                     <div class="column lg-6 md-12">
