--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
                     </div>
 
                     <ul class="intro-social">
-                        <li><a href="#0">Twitter</a></li>
-                        <li><a href="#0">Instagram</a></li>
+                        <li><a href="https://x.com/lhk_SE">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/lior.lh/">Instagram</a></li>
+                        <li><a href="https://github.com/LHKSE">Github</a></li>
                     </ul>
 
                 </div> <!-- end intro content -->
@@ -597,18 +598,16 @@
                     <div class="column lg-3 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Reach me at</h3>
                         <p class="contact-links">
-                            <a href="mailto:sayhello@luther.com" class="mailtoui">sayhello@luther.com</a> <br>
-                            <a href="tel:+1975432345">+197 543 2345</a>
+                            <a href="mailto:lior2.b.s@gmail.com" class="mailtoui">lior2.b.s@gmail.com</a> <br>
+<!--                             <a href="tel:+1975432345">+197 543 2345</a> -->
                         </p>
                     </div>
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
-                            <li><a href="#0">Behance</a></li>
-                            <li><a href="#0">Dribble</a></li>
-                            <li><a href="#0">Twitter</a></li>
-                            <li><a href="#0">Instagram</a></li>
-                            <li><a href="#0">Github</a></li>
+                            <li><a href="https://x.com/lhk_SE">Twitter</a></li>
+                            <li><a href="https://www.instagram.com/lior.lh/">Instagram</a></li>
+                            <li><a href="https://github.com/LHKSE">Github</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
@@ -627,8 +626,8 @@
 
             <div class="row">
                 <div class="column ss-copyright">
-                    <span>© Copyright Luther 2021</span> 
-                    <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a href="https://themewagon.com">Themewagon</a></span>
+                    <span>© Copyright LHKSE</span> 
+<!--                     <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a href="https://themewagon.com">Themewagon</a></span> -->
                 </div>
 
                 <div class="ss-go-top">
