Update index.html gogoe

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJC76YKBLR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', {GA_TRACKING_ID});
+</script>
+    
 <body id="top">
 
 
