--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 </head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_PLACEHOLDER_ID"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJC76YKBLR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'GA_TRACKING_ID');
+  gtag('config', 'G-XJC76YKBLR');
 </script>
     
 <body id="top">
