Update index.html about section

--- a/index.html
+++ b/index.html
@@ -145,10 +145,11 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Hi, I'm a passionate developer with a love for creating innovative and efficient solutions.
-                                I enjoy exploring new technologies, building creative projects, and constantly improving my skills.
-                                My goal is to bring ideas to life through code and design,
-                                while delivering impactful and user-friendly experiences.
+                                Hi, I'm passionate about technology, coding, and building innovative solutions.
+                                I enjoy developing software, learning new programming languages,
+                                and exploring how things work behind the scenes.
+                                Whether it's crafting mobile apps, experimenting with web design,
+                                or diving into backend systems, I love turning ideas into working products.
                             </p>
                         </div>
                     </div>
