--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Hi, I'm passionate about technology, coding, and building innovative solutions.
+                                Hi, I'm passionate about technology, coding, and building innovative solutions. <br>
                                 I enjoy developing software, learning new programming languages,
-                                and exploring how things work behind the scenes.
+                                and exploring how things work behind the scenes. <br>
                                 Whether it's crafting mobile apps, experimenting with web design,
                                 or diving into backend systems, I love turning ideas into working products.
                             </p>
