Update index.html expertice and credit

--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
                             <li>Visual Design</li>
                             <li>DateBase Management</li>
                             <li>UI Design</li>
-                            <li>App Development</li>
+                            <li>Mobile App Development</li>
                             <li>C# Programming</li>
                             <li>MS Access</li>
+                            <li>Android Development</li>
                         </ul>
 
                     </div>
@@ -188,7 +189,7 @@
                         <p class="h1">
                             I love to hear from you.
                             Whether you have a question or just 
-                            want to chat about design, tech & art — shoot me a message.
+                            want to chat about design, tech & programming — shoot me a message.
                         </p>
                     </div>
                 </div> <!-- end contact-top -->
@@ -226,7 +227,10 @@
             <div class="row">
                 <div class="column ss-copyright">
                     <span>© Copyright LHKSE</span> 
-<!--                     <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a href="https://themewagon.com">Themewagon</a></span> -->
+                    <span style="font-size: 10px; color: #999;">
+                      Design by <a href="https://www.styleshout.com/" style="color: #999; text-decoration: none;">StyleShout</a> | 
+                      Distribution by <a href="https://themewagon.com" style="color: #999; text-decoration: none;">Themewagon</a>
+                    </span>
                 </div>
 
                 <div class="ss-go-top">
