Update index.html expertise

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
                             <li>C# Programming</li>
                             <li>MS Access</li>
                             <li>Android Development</li>
+                            <li>Java Programming</li>
+                            <li>Version Control</li>
+                            <li>Git & GitHub</li>
+                            <li>Object-Oriented Programming</li>
                         </ul>
 
                     </div>
