Update index.html - Added linkedin social

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                             <li><a href="https://x.com/lhk_SE">Twitter</a></li>
                             <li><a href="https://www.instagram.com/lior.lh/">Instagram</a></li>
                             <li><a href="https://github.com/LHKSE">Github</a></li>
+                            <li><a href="https://www.linkedin.com/in/lior-h-a6b832307/">LinkedIn</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
@@ -253,3 +254,4 @@
 
 </body>
 </html>
+
