--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 
                     <ul class="intro-social">
                         <li><a href="https://x.com/lhk_SE">Twitter</a></li>
-                        <li><a href="https://www.instagram.com/lior.lh/">Instagram</a></li>
                         <li><a href="https://github.com/LHKSE">Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/lior-h-a6b832307/">LinkedIn</a></li>
                     </ul>
 
                 </div> <!-- end intro content -->
@@ -207,7 +207,6 @@
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
                             <li><a href="https://x.com/lhk_SE">Twitter</a></li>
-                            <li><a href="https://www.instagram.com/lior.lh/">Instagram</a></li>
                             <li><a href="https://github.com/LHKSE">Github</a></li>
                             <li><a href="https://www.linkedin.com/in/lior-h-a6b832307/">LinkedIn</a></li>
                         </ul>
@@ -254,4 +253,5 @@
 
 </body>
 </html>
+
 
