--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <ul class="intro-social">
                         <li><a href="https://x.com/lhk_SE">Twitter</a></li>
                         <li><a href="https://github.com/LHKSE">Github</a></li>
-                        <li><a href="https://www.linkedin.com/in/lior-h-a6b832307/">LinkedIn</a></li>
+                        <li><a href="https://www.linkedin.com/in/liorh/">LinkedIn</a></li>
                     </ul>
 
                 </div> <!-- end intro content -->
@@ -208,7 +208,7 @@
                         <ul class="contact-social">
                             <li><a href="https://x.com/lhk_SE">Twitter</a></li>
                             <li><a href="https://github.com/LHKSE">Github</a></li>
-                            <li><a href="https://www.linkedin.com/in/lior-h-a6b832307/">LinkedIn</a></li>
+                            <li><a href="https://www.linkedin.com/in/liorh/">LinkedIn</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
@@ -253,5 +253,6 @@
 
 </body>
 </html>
+
 
 
