Revise portfolio content and update project links
Updated personal information and project details in the portfolio.

--- a/index.html
+++ b/index.html
@@ -2,24 +2,16 @@
 <html class="no-js ss-preload" lang="en">
 <head>
 
-    <!--- basic page needs
-    ================================================== -->
     <meta charset="utf-8">
     <title>LHK</title>
     <meta name="description" content="Lior - Backend & Frontend Developer Portfolio. Specializing in C#, Database Management, and UI Design.">
     <meta name="author" content="">
 
-    <!-- mobile specific metas
-    ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS
-    ================================================== -->
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
 
-    <!-- favicons
-    ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -27,7 +19,6 @@
 
 </head>
 
-<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XJC76YKBLR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -40,16 +31,12 @@
 <body id="top">
 
 
-    <!-- # preloader
-    ================================================== -->
     <div id="preloader">
         <div id="loader">
         </div>
     </div>
 
 
-    <!-- # page wrap
-    ================================================== -->
     <div class="s-pagewrap">
 
         <div class="circles">
@@ -61,8 +48,6 @@
         </div>
 
 
-        <!-- ## site header 
-        ================================================== -->
         <header class="s-header">
 
             <div class="header-mobile">
@@ -76,21 +61,15 @@
                         <li><a href="index.html" class="home-link">LHK.</a></li>
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
+                        <li><a href="#works" class="smoothscroll">Projects</a></li>
                         <li><a href="#contact" class="smoothscroll">Say Hello</a></li>
                     </ul>
                 </nav>
             </div>
 
-        </header> <!-- end s-header -->
+        </header> <main class="s-content">
 
 
-        <!-- ## main content
-        ==================================================- -->
-        <main class="s-content">
-
-
-            <!-- ### intro
-            ================================================== -->
             <section id="intro" class="s-intro target-section">
 
                 <div class="row intro-content wide">
@@ -105,7 +84,7 @@
                             a backend <br>
                             & frontend <br> 
                             developer based <br>
-                            in Somewhere.
+                            in Israel.
                         </h1>
                     </div>
 
@@ -115,18 +94,11 @@
                         <li><a href="https://www.linkedin.com/in/liorh/">LinkedIn</a></li>
                     </ul>
 
-                </div> <!-- end intro content -->
-
-                <a href="#about" class="intro-scrolldown smoothscroll">
+                </div> <a href="#about" class="intro-scrolldown smoothscroll">
                     <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M11 21.883l-6.235-7.527-.765.644 7.521 9 7.479-9-.764-.645-6.236 7.529v-21.884h-1v21.883z"/></svg>
                 </a>
 
-            </section> <!-- end s-intro -->
-
-
-            <!-- ### about
-            ================================================== -->
-            <section id="about" class="s-about target-section">
+            </section> <section id="about" class="s-about target-section">
 
 
                 <div class="row about-info wide" data-animate-block>
@@ -145,41 +117,120 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Hi, I'm passionate about technology, coding, and building innovative solutions.
-                                I enjoy developing software, learning new programming languages,
-                                and exploring how things work behind the scenes.
-                                Whether it's crafting mobile apps, experimenting with web design,
-                                or diving into backend systems, I love turning ideas into working products.
+                                I’m a high-school student who’s really passionate about software engineering, tech, and learning new things. I enjoy coding and building projects - mainly in Python, Java, and Android Studio - and I’m always looking for ways to turn ideas into real apps. I’ve been playing piano for years, love gaming and high-tech, and generally enjoy anything that lets me create or improve something. I’m looking for opportunities to grow as a developer, get real experience, and move toward a future career in tech.
                             </p>
                         </div>
                     </div>
-                </div> <!-- about-info -->
-
-
-                <div class="row about-expertise" data-animate-block>
+                </div> <div class="row about-expertise" data-animate-block>
                     <div class="column lg-12">
 
                         <h2 class="text-pretitle" data-animate-el>Expertise</h2>
 
                         <ul class="skills-list h1" data-animate-el>
-                            <li>Visual Design</li>
-                            <li>DateBase Management</li>
-                            <li>UI Design</li>
+                            <li>Python</li>
+                            <li>Java</li>
+                            <li>C#</li>
+                            <li>HTML & CSS</li>
+                            <li>Android Studio</li>
                             <li>Mobile App Development</li>
-                            <li>C# Programming</li>
+                            <li>UI/UX Design</li>
+                            <li>SQL</li>
                             <li>MS Access</li>
-                            <li>Android Development</li>
-                            <li>Java Programming</li>
+                            <li>Database Management</li>
+                            <li>Git & GitHub</li>
+                            <li>Node.js & Express</li>
+                            <li>MongoDB</li>
+                            <li>Touch Typing</li>
+                            <li>Piano (11+ years)</li>
+                            <li>English (C1)</li>
+                            <li>Japanese (Learning)</li>
+                            <li>Hebrew (Native)</li>
                         </ul>
 
                     </div>
-                </div> <!-- end about-expertise -->
+                </div> </section> <section id="works" class="s-works target-section">
 
-            </section> <!-- end s-about -->
-            
-            <!-- ### contact
-            ================================================== -->
-            <section id="contact" class="s-contact target-section">
+                <div class="row works-top-block" data-animate-block>
+                    <div class="column lg-12">
+                        <h2 class="text-pretitle" data-animate-el>
+                            Recent Projects
+                        </h2>
+                        <p class="h1" data-animate-el>
+                            Here are some of the projects I've been working on.
+                        </p>
+                    </div>
+                </div> <div class="row folio-list block-lg-one-half block-stack-on-700" data-animate-block>
+
+                    <div class="column" data-animate-el>
+                        <div class="folio-list__item">
+                            <a class="folio-list__item-link" href="#modal-01">
+                                <div class="folio-list__item-pic">
+                                    <img src="images/wmap-thumbnail.jpg" alt="wmap.org Thumbnail">
+                                </div>
+                                <div class="folio-list__item-text">
+                                    <div class="folio-list__item-title">
+                                        wmap.org
+                                    </div>
+                                    <div class="folio-list__item-cat">
+                                        Full-Stack Web Development
+                                    </div>
+                                </div>
+                            </a>
+                            <a class="folio-list__proj-link" href="https://wmap.org" target="_blank" title="Project Link">
+                                <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M14.851 11.923l-3.746 3.746-1.414-1.414 3.746-3.746-3.746-3.746 1.414-1.414 3.746 3.746 3.746-3.746 1.414 1.414-3.746 3.746 3.746 3.746-1.414 1.414-3.746-3.746z"/></svg>
+                            </a>
+                        </div>
+                    </div> <div class="column" data-animate-el>
+                        <div class="folio-list__item">
+                            <a class="folio-list__item-link" href="#modal-02">
+                                <div class="folio-list__item-pic">
+                                    <img src="images/lumina-thumbnail.jpg" alt="Lumina App Thumbnail">
+                                </div>
+                                <div class="folio-list__item-text">
+                                    <div class="folio-list__item-title">
+                                        Lumina
+                                    </div>
+                                    <div class="folio-list__item-cat">
+                                        Mobile App (Android, Java)
+                                    </div>
+                                </div>
+                            </a>
+                            </div>
+                    </div> </div> </section> <div id="modal-01" class="modal-popup" hidden>
+                <div class="modal-popup__desc">
+                    <h5 class="modal-popup__title">wmap.org</h5>
+                    <p>
+                        wmap.org is a secure, permission-based web application that displays a dynamic world map where authenticated users can add pins, flags, and visual markers. The project focuses on creating a system similar to Liveuamap, but with controlled access, user authentication, and backend security.
+                    </p>
+                    <p>
+                        The backend is built with Node.js, Express, MongoDB, and JWT authentication, and supports role-based permissions for map editing. The app is designed for fast loading, safe data handling, and a clean UI.
+                    </p>
+                    <p>
+                        This project reflects my growing skills in backend development, secure authentication, and modern web technologies.
+                    </p>
+                    <ul class="modal-popup__cat">
+                        <li>Full-Stack Web Development</li>
+                        <li>Node.js</li>
+                        <li>MongoDB</li>
+                    </ul>
+                </div>
+                <a href="https://wmap.org" target="_blank" class="modal-popup__details btn btn--primary u-fullwidth">Project Link</a>
+            </div> <div id="modal-02" class="modal-popup" hidden>
+                <div class="modal-popup__desc">
+                    <h5 class="modal-popup__title">Lumina — Advanced Vocabulary Builder</h5>
+                    <p>
+                        Lumina is an Android vocabulary-building app designed to help users expand their English vocabulary through quizzes, custom word lists, and practice tracking. Built in Android Studio (Java) with an SQL database, the app features a clean UI, a practice timer, user login system, and a Home screen that displays the last 5 practice sessions in a single CardView.
+                    </p>
+                    <p>
+                        Lumina focuses on simplicity, daily progress, and helping users learn words efficiently. It is still in development and will be released publicly in the future.
+                    </p>
+                    <ul class="modal-popup__cat">
+                        <li>Mobile App (Android, Java)</li>
+                        <li>Android Studio</li>
+                        <li>SQL</li>
+                    </ul>
+                </div>
+                </div> <section id="contact" class="s-contact target-section">
 
                 <div class="row contact-top">
                     <div class="column lg-12">
@@ -193,14 +244,11 @@
                             want to chat about design, tech & programming — shoot me a message.
                         </p>
                     </div>
-                </div> <!-- end contact-top -->
-
-                <div class="row contact-bottom">
+                </div> <div class="row contact-bottom">
                     <div class="column lg-3 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Reach me at</h3>
                         <p class="contact-links">
                             <a href="mailto:lior2.b.s@gmail.com" class="mailtoui">lior2.b.s@gmail.com</a> <br>
-<!--                             <a href="tel:+1975432345">+197 543 2345</a> -->
                         </p>
                     </div>
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
@@ -214,16 +262,7 @@
                     <div class="column lg-4 md-12 contact-block">
                         <a href="mailto:lior2.b.s@gmail.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
                     </div>
-                </div> <!-- end contact-bottom -->
-
-            </section> <!-- end contact -->
-
-        </main> <!-- end s-content -->
-
-
-        <!-- ## footer
-        ================================================== -->
-        <footer class="s-footer">
+                </div> </section> </main> <footer class="s-footer">
 
             <div class="row">
                 <div class="column ss-copyright">
@@ -241,18 +280,8 @@
                 </div>
             </div>
 
-        </footer> <!-- end s-footer -->
-
-    </div> <!-- end -s-pagewrap -->
-
-
-    <!-- Java Script
-    ================================================== -->
-    <script src="js/plugins.js"></script>
+        </footer> </div> <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
 </body>
 </html>
-
-
-
