Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -165,18 +165,18 @@
                         <div class="folio-list__item">
                             <a class="folio-list__item-link" href="#modal-01">
                                 <div class="folio-list__item-pic">
-                                    <img src="images/wmap-thumbnail.jpg" alt="wmap.org Thumbnail">
+                                    <img src="images/wmap-thumbnail.jpg" alt="wmaps.org Thumbnail">
                                 </div>
                                 <div class="folio-list__item-text">
                                     <div class="folio-list__item-title">
-                                        wmap.org
+                                        wmaps.org
                                     </div>
                                     <div class="folio-list__item-cat">
                                         Full-Stack Web Development
                                     </div>
                                 </div>
                             </a>
-                            <a class="folio-list__proj-link" href="https://wmap.org" target="_blank" title="Project Link">
+                            <a class="folio-list__proj-link" href="https://wmaps.org" target="_blank" title="Project Link">
                                 <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M14.851 11.923l-3.746 3.746-1.414-1.414 3.746-3.746-3.746-3.746 1.414-1.414 3.746 3.746 3.746-3.746 1.414 1.414-3.746 3.746 3.746 3.746-1.414 1.414-3.746-3.746z"/></svg>
                             </a>
                         </div>
@@ -195,10 +195,10 @@
                                     </div>
                                 </div>
                             </a>
-                            </div>
+                        </div>
                     </div> </div> </section> <div id="modal-01" class="modal-popup" hidden>
                 <div class="modal-popup__desc">
-                    <h5 class="modal-popup__title">wmap.org</h5>
+                    <h5 class="modal-popup__title">wmaps.org</h5>
                     <p>
                         wmap.org is a secure, permission-based web application that displays a dynamic world map where authenticated users can add pins, flags, and visual markers. The project focuses on creating a system similar to Liveuamap, but with controlled access, user authentication, and backend security.
                     </p>
@@ -214,12 +214,12 @@
                         <li>MongoDB</li>
                     </ul>
                 </div>
-                <a href="https://wmap.org" target="_blank" class="modal-popup__details btn btn--primary u-fullwidth">Project Link</a>
+                <a href="https://wmaps.org" target="_blank" class="modal-popup__details btn btn--primary u-fullwidth">Project Link</a>
             </div> <div id="modal-02" class="modal-popup" hidden>
                 <div class="modal-popup__desc">
                     <h5 class="modal-popup__title">Lumina — Advanced Vocabulary Builder</h5>
                     <p>
-                        Lumina is an Android vocabulary-building app designed to help users expand their English vocabulary through quizzes, custom word lists, and practice tracking. Built in Android Studio (Java) with an SQL database, the app features a clean UI, a practice timer, user login system, and a Home screen that displays the last 5 practice sessions in a single CardView.
+                        Lumina is an Android vocabulary-building app designed to help users expand their English vocabulary through quizzes, custom word lists, and practice tracking. Built in Android Studio (Java) with an SQL database, the app features a clean UI, a practice timer, user login system, and a Home screen that.
                     </p>
                     <p>
                         Lumina focuses on simplicity, daily progress, and helping users learn words efficiently. It is still in development and will be released publicly in the future.
