Update index.html with new content and structure

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="modal-popup__desc">
                     <h5 class="modal-popup__title">Lumina — Advanced Vocabulary Builder</h5>
                     <p>
-                        Lumina is an Android vocabulary-building app designed to help users expand their English vocabulary through quizzes, custom word lists, and practice tracking. Built in Android Studio (Java) with an SQL database, the app features a clean UI, a practice timer, user login system, and a Home screen that.
+                        Lumina is an Android vocabulary-building app designed to help users expand their English vocabulary through quizzes, custom word lists, and practice tracking. Built in Android Studio (Java) with an SQL database, the app features a clean UI, a practice timer, user login system, and a Home screen that displays the last 5 practice sessions in a single CardView.
                     </p>
                     <p>
                         Lumina focuses on simplicity, daily progress, and helping users learn words efficiently. It is still in development and will be released publicly in the future.
